--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,20 +10,28 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up SSH key
+      - name: Debug secrets presence
+        run: |
+          echo "HOST=${{ secrets.EC2_HOST }}"
+          echo "USER=${{ secrets.EC2_USER }}"
+          if [ -z "${{ secrets.EC2_SSH_KEY }}" ]; then
+            echo "SSH KEY IS EMPTY"
+            exit 1
+          fi
+
+      - name: Setup SSH
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-
-      - name: Trust EC2 host
-        run: |
           ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
+          ls -l ~/.ssh
+          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=yes \
+            ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "whoami"
 
-      - name: Deploy files to EC2
+      - name: Rsync deploy
         run: |
           rsync -avz --delete \
             --exclude='.git*' \
