--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,8 +53,9 @@ jobs:
       - name: Add EC2 to known_hosts
         shell: bash
         run: |
-          set -eux
-          ssh-keyscan -H "${{ secrets.EC2_HOST }}" >> "$HOME/.ssh/known_hosts"
+          mkdir -p "$HOME/.ssh"
+          chmod 700 "$HOME/.ssh"
+          ssh-keyscan -H "${{ secrets.EC2_HOST }}" >> "$HOME/.ssh/known_hosts" || true
 
       # 6️⃣ Test SSH connectivity (hard proof)
       - name: Verify SSH connection
